page slider testing

--- a/index.html
+++ b/index.html
@@ -20,14 +20,21 @@
 <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
-        
+
     </header>
 
     <!--==================== MAIN ====================-->
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home" id="home">
-
+            <div>
+                <a href="">Profile</a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
         </section>
 
         <!--==================== ABOUT ====================-->
