--- a/test.html
+++ b/test.html
@@ -8,15 +8,20 @@
 </head>
 
 <body>
-    <section class="home-slide">
+    <button id="switch-btn" onclick="">
+        Switch
+    </button>
+    <section class="slide home-slide">
         <img src="./assets/images/DSC01556.JPG" alt="bg 1">
     </section>
-    <section class="about-slide">
+    <section class="slide about-slide">
         <img src="./assets/images/DSC01557.JPG" alt="bg 2">
     </section>
-    <section class="contact-slide">
+    <section class="slide contact-slide">
         <img src="./assets/images/DSC01558.JPG" alt="bg 3">
     </section>
+
+    <script src="./assets/js/scripts.js"></script>
 </body>
 
 </html>
