background interactive animation initialized

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 
     <title>Portfolio</title>
 </head>
@@ -27,14 +27,13 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home" id="home">
-            <div>
+            <nav class="main-menu">
                 <a href="">Profile</a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-            </div>
+                <a href="">Skills</a>
+                <a href="">Achievements</a>
+                <a href="">Contact</a>
+                <a href="">Exit</a>
+            </nav>
         </section>
 
         <!--==================== ABOUT ====================-->
