--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <title>Test</title>
 </head>
 
-<body>
+<!-- <body>
     <button id="switch-btn" onclick="">
         Switch
     </button>
@@ -22,6 +22,11 @@
     </section>
 
     <script src="./assets/js/scripts.js"></script>
+</body> -->
+
+<body>
+    <canvas id="canva"></canvas>
+    <script src="./assets/js/animate.js"></script>
 </body>
 
 </html>
