canvas as background

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <canvas id="canva"></canvas>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
 
@@ -37,27 +38,36 @@
         </section>
 
         <!--==================== ABOUT ====================-->
-        <section class="about" id="about">
-
+        <section class="about slider" id="about">
+            <div>
+                <h1>Lorem, ipsum dolor.</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus reiciendis quae excepturi
+                    ut?
+                </p>
+            </div>
+            <figure>
+                <img src="./assets/images/DSC01556.JPG" alt="img">
+            </figure>
         </section>
 
         <!--==================== SKILLS ====================-->
-        <section class="skills">
+        <section class="skills slider">
 
         </section>
 
         <!--==================== SERVICES ====================-->
-        <section class="services" id="services">
+        <section class="services slider" id="services">
 
         </section>
 
         <!--==================== PROJECTS ====================-->
-        <section class="projects" id="projects">
+        <section class="projects slider" id="projects">
 
         </section>
 
         <!--==================== CONTACT ====================-->
-        <section class="contact" id="contact">
+        <section class="contact slider" id="contact">
 
         </section>
     </main>
@@ -78,6 +88,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
+    <script src="./assets/js/animate.js"></script>
 </body>
 
 </html>
